# cnfgnn_release

./: README.md  main.py  pyproject.toml
models/node_classifiers/: federated.py  split.py  standalone.py
models/st_prediction/: federated.py  federated_mtl.py  split.py  split_fed_gnn.py  split_fed_gnn_hetero.py  split_gnn.py  standalone.py
utils/: callbacks.py
