[project]
name = "cnfgnn-release"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "jupyter",
    "matplotlib",
    "pyyaml",
    "scikit-learn",
    "tqdm",
    "networkx",
    "jupyterlab",
    
    "torch==2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    
    "pytorch-lightning",
    "wandb",

    "torch-geometric",
    #"torch-scatter",
    #"torch-sparse",
    #"torch-cluster",
    #"torch-spline-conv",
]
[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
 
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
